Bug 236462 - korganizer crashes activating a new caldav calendar
Summary: korganizer crashes activating a new caldav calendar
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-05 19:24 UTC by Alin M Elena
Modified: 2010-06-20 03:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2010-05-05 19:24:49 UTC
Application: korganizer (4.5 pre- ())
KDE Platform Version: 4.4.74 (KDE 4.4.74 (KDE 4.5 >= 20100428)) "release 3"
Qt Version: 4.6.3
Operating System: Linux 2.6.31.12-0.2-desktop x86_64
Distribution: "openSUSE 11.2 (x86_64)"

-- Information about the crash:
- What I was doing when the application crashed:

- Unusual behavior I noticed:

- Custom settings of the application:
korganizer crashes activating a new caldav calendar
=============
this is just extra rubish to keep the description long enough
=================

The crash can be reproduced every time.

-- Backtrace:
Application: KOrganizer (korganizer), signal: Segmentation fault
[KCrash Handler]
#6  0x00007f68b459b37d in ?? () from /usr/lib64/libQtCore.so.4
#7  0x00007f68b459d1fd in QString::arg(QString const&, int, QChar const&) const () from /usr/lib64/libQtCore.so.4
#8  0x00007f68b4b0458e in KLocalizedString::subs(QString const&, int, QChar const&) const () from /usr/lib64/libkdecore.so.5
#9  0x00007f68b69cfc76 in i18ncp<int, QString> (ctxt=<value optimized out>, sing=<value optimized out>, plur=<value optimized out>, a1=<value optimized out>, a2=...)
    at /usr/include/klocalizedstring.h:1108
#10 0x00007f68b69b0d86 in KCal::IncidenceFormatter::recurrenceString (incidence=<value optimized out>) at /usr/src/debug/kdepimlibs4/kcal/incidenceformatter.cpp:3432
#11 0x00007f68b69cc11c in KCal::IncidenceFormatter::ToolTipVisitor::generateToolTip (this=<value optimized out>, incidence=0x7220b30, dtRangeText=<value optimized out>)
    at /usr/src/debug/kdepimlibs4/kcal/incidenceformatter.cpp:2966
#12 0x00007f68b69cca86 in KCal::IncidenceFormatter::ToolTipVisitor::visit (this=0x7fff53fcbb70, event=0x7220b30) at /usr/src/debug/kdepimlibs4/kcal/incidenceformatter.cpp:2793
#13 0x00007f68b69b5d91 in act (spec=<value optimized out>, richText=<value optimized out>, date=<value optimized out>, incidence=<value optimized out>, location=<value optimized out>, 
    this=<value optimized out>) at /usr/src/debug/kdepimlibs4/kcal/incidenceformatter.cpp:2636
#14 KCal::IncidenceFormatter::toolTipStr (spec=<value optimized out>, richText=<value optimized out>, date=<value optimized out>, incidence=<value optimized out>, location=<value optimized out>, 
    this=<value optimized out>) at /usr/src/debug/kdepimlibs4/kcal/incidenceformatter.cpp:3043
#15 0x00007f68b610d9bd in ?? () from /usr/lib64/libkorganizerprivate.so.4
#16 0x00007f68b61125a1 in ?? () from /usr/lib64/libkorganizerprivate.so.4
#17 0x00007f68b610d23b in ?? () from /usr/lib64/libkorganizerprivate.so.4
#18 0x00007f68b610c0c5 in ?? () from /usr/lib64/libkorganizerprivate.so.4
#19 0x00007f68b607f884 in QWidget::setUpdatesEnabled(bool) () from /usr/lib64/libkorganizerprivate.so.4
#20 0x00007f68b4659916 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/libQtCore.so.4
#21 0x00007f68b46561a3 in QObject::event(QEvent*) () from /usr/lib64/libQtCore.so.4
#22 0x00007f68b4fb035c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#23 0x00007f68b4fb693b in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#24 0x00007f68b70a6d16 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#25 0x00007f68b464667c in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQtCore.so.4
#26 0x00007f68b4673435 in ?? () from /usr/lib64/libQtCore.so.4
#27 0x00007f68b466ffe4 in ?? () from /usr/lib64/libQtCore.so.4
#28 0x00007f68adc7ddee in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#29 0x00007f68adc817b8 in ?? () from /usr/lib64/libglib-2.0.so.0
#30 0x00007f68adc818e0 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#31 0x00007f68b466fcd3 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#32 0x00007f68b505eb2e in ?? () from /usr/lib64/libQtGui.so.4
#33 0x00007f68b4644f92 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#34 0x00007f68b464536c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQtCore.so.4
#35 0x00007f68b464a01b in QCoreApplication::exec() () from /usr/lib64/libQtCore.so.4
#36 0x00000000004085e0 in _start ()

Reported using DrKonqi
Comment 1 Nicolas L. 2010-06-09 11:54:03 UTC
Please install the debug packages for :

qt4
kdelibs
kdepimlibs
kdepim


and give the new backtrace
Comment 2 Sergio Martins 2010-06-20 03:25:26 UTC
SVN commit 1140147 by smartins:

Don't crash when formating an incidence.

BUG: 236462
BUG: 242191


 M  +4 -0      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140147
Comment 3 Sergio Martins 2010-06-20 03:28:04 UTC
SVN commit 1140149 by smartins:

Fwd port r1140147 bby smartins from branch 4.4 to trunk:

Don't crash when formating an incidence.
BUG: 236462
BUG: 242191

MERGE: e35



 M  +4 -0      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140149
Comment 4 Sergio Martins 2010-06-20 03:35:01 UTC
SVN commit 1140153 by smartins:

Backport r1140149 by smartins from branch 4.4 to e35:

Don't crash when formating an incidence.
CCBUG: 236462
CCBUG: 242191



 M  +4 -1      incidenceformatter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140153