Fwd port r1140147 bby smartins from branch 4.4 to trunk:

Don't crash when formating an incidence.
BUG: 236462
BUG: 242191

MERGE: e35

svn path=/trunk/KDE/kdepimlibs/; revision=1140149